--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 body {
-  background-color: gainsboro;
   /* Use a system font, if none are available use an available sans-sarif */
   font-family: system-ui, sans-serif;
-  margin: 0;
+  background-color: rgb(195, 227, 250) !important;
 }
 
 .board {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   width: 325px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  margin-top: 8px;
 }
 
 .sqr {
@@ -16,5 +19,24 @@ body {
   aspect-ratio: 1/1;
   border: 3px solid black;
   font-size: 64px;
+  text-align: center;
+  margin: 1px;
+  background-color: rgb(213, 248, 219) !important;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 50px !important;
+  margin-bottom: 8px !important;
+  font-family: Anton, sans-serif;
+  font-size: 60px !important;
+}
+
+.btn {
+  margin-top: 20px;
+}
+
+#message {
+  margin: 30px 0;
   text-align: center;
 }
